syntax = "proto3";

package sdc.biceps;

option java_multiple_files = true;
option java_package = "org.somda.sdc.proto.model.biceps";
option java_outer_classname = "ActivateProto";

import "sdc/biceps/abstractset.proto";
import "sdc/biceps/extension.proto";
import "google/protobuf/any.proto";

  message ActivateMsg {
    AbstractSetMsg abstract_set = 1;
    message ArgumentMsg {
      ExtensionMsg element1 = 1;
      google.protobuf.Any arg_value = 2;
    }
    repeated ArgumentMsg argument = 2;
  }
