syntax = "proto3";

package sdc.biceps;

option java_multiple_files = true;
option java_package = "org.somda.sdc.proto.model.biceps";
option java_outer_classname = "SetComponentStateOperationDescriptorProto";

import "sdc/biceps/abstractsetstateoperationdescriptor.proto";

message SetComponentStateOperationDescriptorMsg {
  AbstractSetStateOperationDescriptorMsg abstract_set_state_operation_descriptor = 1;
}
